# alias-to-sieve

./: Cargo.toml  README.md
src/: lib.rs  main.rs
testdata/: apostrophe_destination.aliases  apostrophe_redirect.aliases  example.aliases  infiniterec.aliases  simple.aliases
